--- a/Loja.css
+++ b/Loja.css
@@ -8,6 +8,7 @@ html,body{
 body{
   background-color:#404040;
 }
+
 .canvas-grid {
   display: grid;
   flex-wrap: wrap;
@@ -25,7 +26,7 @@ body{
 
 
 .canvas-description {
-  text-align: center;
+  text-align: flex;
   margin: 0 10px 10px;
   width: 100%;
 }
