--- a/Loja.css
+++ b/Loja.css
@@ -41,7 +41,25 @@ body{
   text-decoration: none;
 }
 
-   
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+th, td {
+  text-align: left;
+  padding: 8px;
+}
+th {
+  background-color: #f2f2f2;
+}
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+.total {
+  font-weight: bold;
+}
+
+
 div{
   display:flex; 
   width:100%; 
